# rspt

./: .gitignore  Cargo.toml  LICENSE  README.md  test.bat  test.sh
data/: camera.json  camera.ron  materials.json  materials.ron  scene.json  scene.ron
data/models/: ceiling.ply  floor.ply  suzanne.ply  suzanne2.ply
src/: main.rs
src/geometry/: aabb.rs  bounding_box.rs  bvh.rs  mesh.rs  mod.rs  triangle_bundle.rs  util.rs
src/scene/: loaders.rs  mod.rs  types.rs
src/tracer/: camera.rs  color.rs  geometry.rs  halton.rs  image.rs  image2d.rs  material.rs  mod.rs  ray.rs  sampling.rs  scene.rs
