[package]
name = "rusty_ray"
version = "0.1.0"
authors = ["José Franco Campos <josefrancocampos@gmail.com>"]

[dependencies]
clap = "2"
image = "*"
rand = "0.4"
rayon = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.nalgebra]
version = "0.16"
features = ["serde-serialize"]
